Added resumable.php package.

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "alexeyhong10@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "dilab/resumable.php": "^0.1.4"
+    }
 }
